--- a/scrape/test.yaml
+++ b/scrape/test.yaml
@@ -9,5 +9,5 @@ parser_config:
   headers:
     "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36"
   throttle_per_second: 1
-  dump_dir: "dump"
+  dump_dir: "/tmp/test_dump/"
 
