--- a/scrape/test.yaml
+++ b/scrape/test.yaml
@@ -1,13 +1,17 @@
 root: "https://www.farfetch.com/"
 
 scrape:
-  max_pages: 9
+  max_pages: 5
   state_file: "scrape_state.yaml"
+  priorities:
+    - '^https://www.farfetch.com/.*item-\d+.aspx(\?.*)?$'
 
 parser_config:
   base_url: "https://www.farfetch.com/"
   headers:
     "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36"
+  scraper_api:
+    country_code: "us"
   throttle_per_second: 1
   dump_dir: "/tmp/test_dump/"
 
