--- a/scrape/ff_products.yaml
+++ b/scrape/ff_products.yaml
@@ -12,12 +12,12 @@ seeds:
   - "file:///Users/sergey/Documents/ff_dump/us-sitemap-products-11.xml.gz"
 
 scrape:
-  max_pages: 100
+  max_pages: 1000
   state_file: "/Users/sergey/Documents/ff_dump/products_state.yaml"
   priorities: []
 
 parser_config:
-  base_url: "https://www.farfetch.com/"
+  concurrency: 5
   scraper_api:
     country_code: "us"
   throttle_per_second: 10
