--- a/scrape/test.yaml
+++ b/scrape/test.yaml
@@ -1,14 +1,14 @@
 seeds:
-  - "file:///Users/sergey/Documents/search/us-sitemap-products-1.xml.gz"
+  - "file:///Users/sergey/Documents/ff_dump/us-sitemap-products-1.xml.gz"
 
 scrape:
-  max_pages: 5
+  max_pages: 10
   state_file: "/tmp/ff_dump/state.yaml"
   priorities:
     - '^https://www.farfetch.com/.*item-\d+.aspx(\?.*)?$'
 
 parser_config:
-  base_url: "https://www.farfetch.com/"
+  concurrency: 3
   headers:
     "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36"
   scraper_api:
